--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "mm-soa-cli",
+	"name": "mm_soa-cli",
 	"version": "1.0.0",
 	"description": "这是用来构建mm_soa服务端用的脚手架工具，用于快速搭建自动化智能网站",
 	"main": "index.js",
@@ -11,7 +11,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/qiuwenwu/mm-cli.git"
+		"url": "git+https://github.com/qiuwenwu/mm_soa-cli.git"
 	},
 	"keywords": [
 		"mm",
@@ -25,9 +25,9 @@
 	"author": "邱文武",
 	"license": "ISC",
 	"bugs": {
-		"url": "https://github.com/qiuwenwu/mm-cli/issues"
+		"url": "https://github.com/qiuwenwu/mm_soa-cli/issues"
 	},
-	"homepage": "https://github.com/qiuwenwu/mm-cli#readme",
+	"homepage": "https://github.com/qiuwenwu/mm_soa-cli#readme",
 	"dependencies": {
 		"colors": "^1.4.0",
 		"commander": "^6.2.0",
